# stocksAnalysis

./: CMakeLists.txt  Interval.h  LinkedQueue.cpp  LinkedQueue.h  Node.cpp  Node.h  Portfolio.cpp  Portfolio.h  README  README.md  Stock.cpp  Stock.h  SymbolPair.cpp  SymbolPair.h  SymbolTable.cpp  SymbolTable.h  YahooFinanceAPI.h  main.cpp  makefile  stocks  yfapi.h
